--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "clark-challenge",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "echo \"\\033[33mRunning eslint check\" &&  eslint .",
+    "tsc": "echo \"\\033[33mRunning typescript check\" && tsc"
   },
   "dependencies": {
     "expo": "~49.0.8",
@@ -17,6 +19,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.2",
     "typescript": "^5.1.3"
   },
   "private": true
