--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "echo \"\\033[33mRunning eslint check\" &&  eslint .",
-    "tsc": "echo \"\\033[33mRunning typescript check\" && tsc"
+    "tsc": "echo \"\\033[33mRunning typescript check\" && tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "expo": "~49.0.8",
@@ -26,7 +27,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "typescript": "^5.1.3"
