--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
     "lint": "echo \"\\033[33mRunning eslint check\" &&  eslint .",
     "tsc": "echo \"\\033[33mRunning typescript check\" && tsc",
     "prepare": "husky install"
@@ -14,11 +15,17 @@
   "dependencies": {
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.2.2",
+    "@types/jest": "^29.5.4",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -32,5 +39,14 @@
     "prettier": "^3.0.2",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
+  }
 }
