--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --verbose",
     "lint": "echo \"\\033[33mRunning eslint check\" &&  eslint .",
     "tsc": "echo \"\\033[33mRunning typescript check\" && tsc",
     "prepare": "husky install"
