--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "react"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "universe", "plugin:react-hooks/recommended", "prettier"],
-  "rules": {}
+  "rules": {
+    "prefer-arrow-callback": "error",
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
+  }
 }
