--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
