--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
+    "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
