--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --verbose",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "echo \"\\033[33mRunning eslint check\" &&  eslint .",
     "tsc": "echo \"\\033[33mRunning typescript check\" && tsc",
     "prepare": "husky install"
@@ -22,6 +23,7 @@
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-format-currency": "^0.0.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-test-renderer": "^18.2.0"
